--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">bike2</string>
+    <string name="app_name">CUBIKE</string>
     <string name="game_view_content_description">Game view</string>
 </resources>
